--- a/index.html
+++ b/index.html
@@ -7,59 +7,53 @@
 
     <title>Charles Bogus</title>
 
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <link href="starter-template.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <link href="./css/style.css" rel="stylesheet" />
 
   </head>
 
   <body>
 
-    <div class="container">
+    <!-- <div class="container"> -->
 
-      <div class="bgImg">
-        <img src="./images/img01.jpg" alt="">
-        <img src="./images/img02.jpg" alt="">
-        <img src="./images/img03.jpg" alt="">
-        <img src="./images/img04.jpg" alt="">
-        <img src="./images/img05.jpg" alt="">
-        <img src="./images/img06.jpg" alt="">
-        <img src="./images/img07.jpg" alt="">
-        <img src="./images/img08.jpg" alt="">
-        <img src="./images/img09.jpg" alt="">
-        <img src="./images/img10.jpg" alt="">
-        <img src="./images/img11.jpg" alt="">
-        <img src="./images/img12.jpg" alt="">
-        <img src="./images/img13.jpg" alt="">
-        <img src="./images/img14.jpg" alt="">
-        <img src="./images/img15.jpg" alt="">
-        <img src="./images/img16.jpg" alt="">
-        <img src="./images/img17.jpg" alt="">
-        <img src="./images/img18.jpg" alt="">
-        <img src="./images/img19.jpg" alt="">
-        <img src="./images/img20.jpg" alt="">
-        <img src="./images/img21.jpg" alt="">
-        <img src="./images/img22.jpg" alt="">
-        <img src="./images/img23.jpg" alt="">
-        <img src="./images/img24.jpg" alt="">
-        <img src="./images/img25.jpg" alt="">
-        <img src="./images/img26.jpg" alt="">
-        <img src="./images/img27.jpg" alt="">
-        <img src="./images/img28.jpg" alt="">
-        <img src="./images/img29.jpg" alt="">
-        <img src="./images/img30.jpg" alt="">
+      <div class="background">
+        <img class="logoImg" src="./images/img01.jpg" alt="">
+        <img class="bgImg" src="//placehold.it/123x123" alt="">
+        <img class="bgImg" src="//placehold.it/123x123" alt="">
+        <img class="bgImg" src="./images/img02.jpg" alt="">
+        <img class="bgImg" src="./images/img03.jpg" alt="">
+        <img class="bgImg" src="./images/img04.jpg" alt="">
+        <img class="bgImg" src="./images/img05.jpg" alt="">
+        <img class="bgImg" src="./images/img06.jpg" alt="">
+        <img class="bgImg" src="./images/img07.jpg" alt="">
+        <img class="bgImg" src="./images/img08.jpg" alt="">
+        <img class="bgImg" src="./images/img09.jpg" alt="">
+        <img class="bgImg" src="./images/img10.jpg" alt="">
+        <img class="bgImg" src="./images/img11.jpg" alt="">
+        <img class="bgImg" src="./images/img12.jpg" alt="">
+        <img class="bgImg" src="./images/img13.jpg" alt="">
+        <img class="bgImg" src="./images/img14.jpg" alt="">
+        <img class="bgImg" src="./images/img15.jpg" alt="">
+        <img class="bgImg" src="./images/img16.jpg" alt="">
+        <img class="bgImg" src="./images/img17.jpg" alt="">
+        <img class="bgImg" src="./images/img18.jpg" alt="">
+        <img class="bgImg" src="./images/img19.jpg" alt="">
+        <img class="bgImg" src="./images/img20.jpg" alt="">
+        <img class="bgImg" src="./images/img21.jpg" alt="">
+        <img class="bgImg" src="./images/img22.jpg" alt="">
+        <img class="bgImg" src="./images/img23.jpg" alt="">
+        <img class="bgImg" src="./images/img24.jpg" alt="">
+        <img class="bgImg" src="./images/img25.jpg" alt="">
+        <img class="bgImg" src="./images/img26.jpg" alt="">
+        <img class="bgImg" src="./images/img27.jpg" alt="">
+        <img class="bgImg" src="./images/img28.jpg" alt="">
+        <img class="bgImg" src="./images/img29.jpg" alt="">
+        <img class="bgImg" src="./images/img30.jpg" alt="">
       </div>
-
-    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   </body>
 </html>
